fix overflow list

--- a/src/pages/habits/components/footer.component.css
+++ b/src/pages/habits/components/footer.component.css
@@ -4,5 +4,5 @@
 
 .footer-box-position {
     position: fixed;
-    bottom: 0;
+    bottom: 3px;
 }
