--- a/src/pages/habits/pages/detail/detail.css
+++ b/src/pages/habits/pages/detail/detail.css
@@ -5,6 +5,6 @@
     min-height: 100px;
 }
 
-.detail-entries-box-size {
+.c-detail-entries-box-size {
     max-height: 420px;
 }
